<resources>
    <string name="app_name">OpiniaoDeTudo</string>
    <string name="label_tv_informe_opiniao">Informe abaixo sua opinião</string>
    <string name="hint_sua_opiniao">Sua opinião</string>
    <string name="action_menu_done">Done</string>
    <string name="ultima_opiniao">Última opinião: %s</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Excluir</string>
    <string name="new_item">Novo item</string>
    <string name="list_item">Listar itens</string>
    <string name="list_settings">Preferências</string>
    <string name="salvar">Salvar</string>
    <string name="alerta_opiniao_vazia">Sério? Não vai escrever nada?</string>
    <string name="atualizar">Atualizar</string>
    <string name="alerta_excluir">Deseja realmente excluir esse registro?</string>
    <string name="titulo_alerta_excluir">Cuidado!</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancelar</string>
    <string name="hint_titulo">Título</string>
    <string name="informe_o_titulo">Informe o título</string>
    <string name="nova_opiniao">Nova Opinião</string>
    <string name="foto">Foto</string>
    <string name="erro_tirar_foto">Erro ao capturar a foto</string>
    <string name="abrir_no_mapa">Abrir no mapa</string>
    <string name="titulo_janela_edicao">Alteração</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="night_mode_header">Um layout mais agradável à noite</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="night_mode_title">Modo noturno</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="from">Desenvolvedor</string>
    <string name="ronan">Ronan Sales Lima</string>
    <string name="matricula">1931088024</string>
</resources>
