<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_item"
        android:icon="@drawable/ic_add_note"
        android:orderInCategory="1"
        android:title="@string/new_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_list_item"
        android:icon="@drawable/ic_list"
        android:orderInCategory="2"
        android:title="@string/list_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_list_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="3"
        android:title="@string/list_settings"
        app:showAsAction="always" />
</menu>