<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.SplashActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_rate_review" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:typeface="serif"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvDesenvolvedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:alpha="0.5"
        android:text="@string/from"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/tvRonan"
        app:layout_constraintEnd_toStartOf="@+id/tvRonan"
        app:layout_constraintStart_toEndOf="@+id/tvRonan" />

    <TextView
        android:id="@+id/tvRonan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/ronan"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toTopOf="@+id/tvMatricula"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/matricula"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvRonan"
        app:layout_constraintStart_toEndOf="@+id/tvRonan" />
</androidx.constraintlayout.widget.ConstraintLayout>